Fixed subreddit link not showing

--- a/thread.css
+++ b/thread.css
@@ -105,7 +105,7 @@
   margin-top: 20px;
 }
 
-#reddit_comments .author {
+#reddit_comments .author, #reddit_comments .subreddit {
   font-weight: bold;
 }
 
@@ -165,13 +165,17 @@ padding: 0px !important;
 font-size: 1.1em;
 }
 
-.tagline > a.author {
-text-decoration: none;
-padding-right: 0px;
-margin-right: 5px;
+.top-matter .tagline > a.author {
+  margin-right: 0px;
 }
 
-.tagline > a.author:hover {
+.tagline > a.author, .tagline a.subreddit {
+  margin-right: 5px;
+  text-decoration: none;
+  padding-right: 0px;
+}
+
+.tagline > a.author:hover, .tagline > a.subreddit:hover {
 text-decoration: underline;
 }
 
